--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,3 +86,12 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
 
+[InputPlatformSettings_Windows InputPlatformSettings]
+MaxTriggerFeedbackPosition=8
+MaxTriggerFeedbackStrength=8
+MaxTriggerVibrationTriggerPosition=9
+MaxTriggerVibrationFrequency=255
+MaxTriggerVibrationAmplitude=8
++HardwareDevices=(InputClassName="XInputInterface",HardwareDeviceIdentifier="XInputController")
++HardwareDevices=(InputClassName="",HardwareDeviceIdentifier="")
+
